# externref

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-reusable.yml  ci.yml  release.yml  scheduled.yml
crates/cli/: Cargo.toml  Dockerfile  README.md  deny.toml  package.sh
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs  test.wasm
crates/lib/: Cargo.toml  README.md
crates/lib/src/: error.rs  guard.rs  imports.rs  lib.rs  resource.rs  signature.rs  surrogate.rs
crates/lib/src/processor/: error.rs  functions.rs  mod.rs  state.rs
crates/lib/tests/: processor.rs  version_match.rs
crates/macro/: Cargo.toml  README.md
crates/macro/src/: externref.rs  lib.rs
crates/macro/tests/: integration.rs
crates/macro/tests/ui/: bogus_stubs_condition.rs  bogus_stubs_condition.stderr  export_with_stubs.rs  export_with_stubs.stderr  fn_with_bogus_export_name.rs  fn_with_bogus_export_name.stderr  invalid_resource_syntax.rs  invalid_resource_syntax.stderr  item_with_bogus_abi.rs  item_with_bogus_abi.stderr  item_without_abi.rs  item_without_abi.stderr  module_with_bogus_link_name.rs  module_with_bogus_link_name.stderr  module_with_bogus_name.rs  module_with_bogus_name.stderr  module_without_name.rs  module_without_name.stderr  resource_on_function_with_default_return_type.rs  resource_on_function_with_default_return_type.stderr  resource_on_invalid_arg.rs  resource_on_invalid_arg.stderr  unsupported_item.rs  unsupported_item.stderr  variadic_fn.rs  variadic_fn.stderr
crates/processor/: Cargo.toml
crates/processor/src/: error.rs  functions.rs  lib.rs  state.rs
docs/: .gitignore  book.toml
docs/src/: README.md  SUMMARY.md  library.md
docs/src/cli/: README.md  build.md  docker.md
e2e-tests/: Cargo.toml  README.md
e2e-tests/src/: imports.rs  lib.rs
e2e-tests/tests/: integration.rs
e2e-tests/tests/integration/: compile.rs  main.rs
externref/: all.html  attr.externref.html  enum.FunctionKind.html  enum.ReadErrorKind.html  index.html  sidebar-items.js  struct.BitSlice.html  struct.Forget.html  struct.Function.html  struct.ReadError.html  struct.Register.html  struct.Resource.html  trait.DropGuard.html  type.ResourceCopy.html
externref/error/: enum.ReadErrorKind.html  struct.ReadError.html
externref/guard/: struct.Forget.html  struct.Register.html  trait.DropGuard.html
externref/processor/: enum.Error.html  enum.Location.html  index.html  sidebar-items.js  struct.Processor.html
externref/processor/error/: enum.Error.html  enum.Location.html
externref/resource/: struct.Resource.html  type.ResourceCopy.html
externref/signature/: enum.FunctionKind.html  struct.BitSlice.html  struct.Function.html
externref_macro/: all.html  attr.externref.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/externref/: externref-desc-0-.js
search.desc/externref_macro/: externref_macro-desc-0-.js
search.index/: 0151e2206bd2.js  09dccb406949.js  14d0b7415a0e.js  1b74d0006800.js  1c72963b094e.js  1f4882a8a85d.js  2025443757f5.js  2312ededfd47.js  3936f3ec84c7.js  3b84308a66d5.js  44126bccff45.js  454f1cf5b81e.js  49b7eb01cdc9.js  4b42919bcba8.js  57197f512707.js  647f21653cfc.js  6aa82c2a9b46.js  6ce6defa0fba.js  6de3b2f91e17.js  6ea680ee5bf2.js  716851125c91.js  7545bcf9f8d0.js  784a23cf95af.js  796edb3b47ac.js  root.js
search.index/crateNames/: 68fcc44f19f4.js
search.index/desc/: 70bbc3f3dbb9.js  e8ee96ddc137.js
search.index/entry/: b348134d6772.js  fe5d1abd79c0.js
search.index/function/: 817c442ad74d.js  835776913d47.js
search.index/generic_inverted_index/: 3c5eecbef7e1.js  e39814a1fd2c.js
search.index/name/: 3fb825baeafb.js  628efcabd691.js
search.index/normalizedName/: 4faed9178078.js  a3ac27728ad4.js
search.index/path/: 1cef4aa505f1.js  a0714dd943ae.js
search.index/type/: 6a6bac5b5371.js  b1c40766ea0a.js
src/: error.rs  lib.rs  signature.rs
src/externref/: error.rs.html  guard.rs.html  imports.rs.html  lib.rs.html  resource.rs.html  signature.rs.html  surrogate.rs.html
src/externref/processor/: error.rs.html  functions.rs.html  mod.rs.html  state.rs.html
src/externref_macro/: externref.rs.html  lib.rs.html
src/processor/: error.rs  functions.rs  mod.rs  state.rs
tests/: processor.rs
tests/modules/: simple-no-inline.wast  simple.wast
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/externref/guard/: trait.DropGuard.js
type.impl/externref/: struct.Resource.js
