[workspace]
members = ["crates/cli", "crates/lib", "crates/macro", "e2e-tests"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/externref"

[workspace.dependencies]
# General-purpose dependencies
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive", "wrap_help"] }
once_cell = "1.19.0"
predicates = { version = "3.1.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walrus = "0.20.3"

# Test dependencies
assert_matches = "1.5.0"
doc-comment = "0.3.3"
term-transcript = { version = "0.3.0", features = ["portable-pty"] }
test-casing = "0.1.2"
tracing-capture = "0.1.0"
trybuild = "1.0.89"
version-sync = "0.9.4"
wasmtime = "14.0.4"
wat = "1.0.86"

# Internal dependencies
externref-macro = { version = "=0.2.0", path = "crates/macro" }
externref = { version = "=0.2.0", path = "crates/lib", default-features = false }
# ^ We require an exact version in order to simplify crate evolution (e.g., to not worry
# that future internal changes in macro implementations will break previous versions
# of the `externref` crate).

# Profile for WASM modules generated in E2E tests
[profile.wasm]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true

# Profile for workspace executables
[profile.executable]
inherits = "release"
strip = true
codegen-units = 1
lto = true
