[package]
name = "externref-test"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "End-to-end test crate for `externref`"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.externref]
path = "../crates/lib"

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
once_cell.workspace = true
predicates = { version = "3.0.1", default-features = false }
test-casing = "0.1.0"
tracing.workspace = true
tracing-capture = "0.1.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmtime = "12.0.1"

[dev-dependencies.externref]
path = "../crates/lib"
features = ["processor", "tracing"]
