[package]
name = "externref-test"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "End-to-end test crate for `externref`"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
externref = { workspace = true, features = ["default"] }
hashbrown.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { workspace = true, features = ["global"] }

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
once_cell.workspace = true
predicates.workspace = true
tempfile.workspace = true
test-casing.workspace = true
tracing.workspace = true
tracing-capture.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime.workspace = true

[dev-dependencies.externref]
path = "../crates/lib"
features = ["processor", "tracing"]
