[package]
name = "externref-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["externref", "anyref", "wasm"]
categories = ["command-line-utilities", "wasm", "development-tools::ffi"]
description = "CLI for `externref` providing WASM module processing"

[[bin]]
name = "externref"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }

[dependencies.externref]
version = "0.2.0"
path = "../lib"
default-features = false
features = ["processor"]

[dev-dependencies]
term-transcript = { version = "0.3.0-beta.2", features = ["portable-pty"] }
test-casing = "0.1.1"

[features]
default = ["tracing"]
# Enables tracing output during program execution.
tracing = ["tracing-subscriber", "externref/tracing"]
