[package]
name = "externref-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["externref", "anyref", "wasm"]
categories = ["command-line-utilities", "wasm", "development-tools::ffi"]
description = "CLI for `externref` providing WASM module processing"

[[bin]]
name = "externref"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

# Internal dependencies
externref = { workspace = true, features = ["processor"] }

[dev-dependencies]
term-transcript.workspace = true
test-casing.workspace = true

[features]
default = ["tracing"]
# Enables tracing output during program execution.
tracing = ["tracing-subscriber", "externref/tracing"]
