[package]
name = "externref-macro"
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.60"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["externref", "anyref", "wasm"]
categories = ["wasm", "development-tools::ffi"]
description = "Proc macro for `externref`"
repository = "https://github.com/slowli/externref"

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1.0.71"
version-sync = "0.9.4"
