[package]
name = "externref-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["externref", "anyref", "wasm"]
categories = ["wasm", "development-tools::ffi"]
description = "Proc macro for `externref`"

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
trybuild = "1.0.84"
version-sync.workspace = true
