[package]
name = "externref-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["externref", "anyref", "wasm"]
categories = ["wasm", "development-tools::ffi"]
description = "Proc macro for `externref`"

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits"] }
trybuild.workspace = true
version-sync.workspace = true
